--- a/try_bootstrap/app/views/layouts/application.html.erb
+++ b/try_bootstrap/app/views/layouts/application.html.erb
@@ -2,13 +2,15 @@
 <html>
 <head>
   <title>TryBootstrap</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 
 <%= yield %>
-
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
 </html>
